Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@gem_mmap_gtt@fault-concurrent-(x|y) - incomplete/crash - unhandled error in i915_error_to_vmf_fault: -105
<4> [125.687562] ------------[ cut here ]------------
<4> [125.687583] unhandled error in i915_error_to_vmf_fault: -105
<4> [125.687612] WARNING: CPU: 0 PID: 19720 at drivers/gpu/drm/i915/gem/i915_gem_mman.c:224 i915_error_to_vmf_fault+0x6b/0xb0 [i915]
<4> [125.687782] Modules linked in: vgem drm_shmem_helper fuse snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic ledtrig_audio i915 mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul drm_buddy crc32_pclmul ghash_clmulni_intel snd_hda_intel ttm snd_intel_dspcfg drm_dp_helper snd_hda_codec drm_kms_helper snd_hwdep syscopyarea snd_hda_core broadcom sysfillrect bcm_phy_lib tg3 ptp snd_pcm mei_me pps_core sysimgblt i2c_i801 fb_sys_fops prime_numbers i2c_smbus mei lpc_ich
<4> [125.687884] CPU: 0 PID: 19720 Comm: gem_mmap_gtt Not tainted 5.17.0-rc4-CI-Patchwork_22334+ #1
<4> [125.687889] Hardware name: Dell Inc. XPS 8300 /0Y2MRG, BIOS A06 10/17/2011
<4> [125.687893] RIP: 0010:i915_error_to_vmf_fault+0x6b/0xb0 [i915]
<4> [125.688041] Code: 02 00 00 00 75 e4 48 83 ec 08 89 fa 48 c7 c6 40 9e 43 a0 48 c7 c7 ca a0 4b a0 89 44 24 04 c6 05 03 75 2e 00 01 e8 01 39 7f e1 <0f> 0b 8b 44 24 04 48 83 c4 08 c3 83 ff fb 7f 15 b8 02 00 00 00 83
<4> [125.688044] RSP: 0000:ffffc9000080fc78 EFLAGS: 00010286
<4> [125.688050] RAX: 0000000000000000 RBX: ffff88812cf96828 RCX: 0000000000000001
<4> [125.688053] RDX: 0000000080000001 RSI: ffffffff82311b5d RDI: 00000000ffffffff
<4> [125.688057] RBP: ffff88811072e948 R08: 0000000000000000 R09: c0000000ffff7fff
<4> [125.688061] R10: 0000000000000001 R11: ffffc9000080fa90 R12: 0000000000000008
<4> [125.688064] R13: ffff888120236440 R14: 00000000ffffff97 R15: 00000000ffffff97
<4> [125.688165] FS: 00007f325c71d700(0000) GS:ffff888227600000(0000) knlGS:0000000000000000
<4> [125.688170] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [125.688174] CR2: 00007f32660a0000 CR3: 0000000115962005 CR4: 00000000000606f0
<4> [125.688178] Call Trace:
<4> [125.688181] <TASK>
<4> [125.688186] vm_fault_gtt+0x118/0x940 [i915]
<4> [125.688360] ? futex_q_unlock+0xd/0x20
<4> [125.688377] ? 0xffffffff81000000
<4> [125.688392] __do_fault+0x2f/0x100
<4> [125.688399] __handle_mm_fault+0xe1f/0x1140
<4> [125.688613] handle_mm_fault+0x75/0x1b0
<4> [125.688623] do_user_addr_fault+0x1e7/0x670
<4> [125.688637] exc_page_fault+0x62/0x230
<4> [125.688645] ? asm_exc_page_fault+0x8/0x30
<4> [125.688652] asm_exc_page_fault+0x1e/0x30
<4> [125.688657] RIP: 0033:0x55cba36030b7
<4> [125.688661] Code: 45 10 41 83 c6 01 41 83 c4 01 8b 00 85 c0 74 53 41 8b 5d 08 44 01 e3 89 d8 c1 f8 1f c1 e8 1b 01 c3 83 e3 1f 29 c3 48 8b 04 d9 <8b> 28 e8 62 f1 ff ff 31 d2 49 8b 4d 18 83 ed 01 f7 f5 48 8b 04 d9
<4> [125.688666] RSP: 002b:00007f325c71ca10 EFLAGS: 00010202
<4> [125.688671] RAX: 00007f32660a0000 RBX: 0000000000000015 RCX: 00007fff9204dc50
<4> [125.688675] RDX: 0000000000272145 RSI: 00000000002a0000 RDI: 00007f3270d9d740
<4> [125.688679] RBP: 000000000029ffff R08: 0000000000000000 R09: 00007f3270d9d240
<4> [125.688682] R10: 0000000000000000 R11: 0000000000000246 R12: 0000000000000273
<4> [125.688685] R13: 00007fff9204dd90 R14: 0000000000000001 R15: 00007f325c71cb00
<4> [125.688705] </TASK>
<4> [125.688708] irq event stamp: 68409
<4> [125.688711] hardirqs last enabled at (68415): [<ffffffff81131ec2>] __up_console_sem+0x62/0x70
<4> [125.688717] hardirqs last disabled at (68420): [<ffffffff81131ea7>] __up_console_sem+0x47/0x70
<4> [125.688722] softirqs last enabled at (68236): [<ffffffff81e0032d>] __do_softirq+0x32d/0x493
<4> [125.688726] softirqs last disabled at (68193): [<ffffffff810b9106>] irq_exit_rcu+0xa6/0xe0
<4> [125.688732] ---[ end trace 0000000000000000 ]---